<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.vertie.modules.login.LoginViewModel" />
    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="153dp"
                android:src="@drawable/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/logo" />


            <include
                layout="@layout/input_text_light_gray_underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp14"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/email_login"
                app:background="@{@drawable/edittext_shape}"
                app:hintText="@{@string/email}"
                app:input="@={viewmodel.email}"
                app:error="@{viewmodel.errorBinder.emailError}"
                android:layout_marginTop="@dimen/dp60"
                app:drawableEnd="@{@drawable/ic_mail_icon}"
                />


            <include
                layout="@layout/input_password_underlined"
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_login"
                app:error="@{viewmodel.errorBinder.passwordError}"
                app:hintText="@{@string/password}"
                app:input="@={viewmodel.password}"
                android:layout_marginTop="@dimen/dp20"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dp13"
                android:layout_marginEnd="@dimen/dp14"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:id="@+id/forget_password_button"
                android:onClick="@{() ->viewmodel.forgetPassword()}"
                android:fontFamily="@font/robotomedium"
                android:textSize="@dimen/sp14"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forget_password_button"
                android:layout_marginTop="@dimen/dp76"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/sp20"
                android:paddingVertical="@dimen/dp20"
                android:layout_marginHorizontal="@dimen/dp14"
                android:background="@drawable/bk_rounded_2c72f9"
                android:onClick="@{() ->viewmodel.login()}"
                android:fontFamily="@font/robotomedium"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

        </layout>